# AFDPS

./: .gitignore  README.md  main.py  pyproject.toml
algo/: afdps.py  daps_ns.py
algo/afdps_core/: ensemble_denoiser_edm.py
configs/algorithm/: afdps.yaml
configs/problem/: navier-stokes-afdps-ds16.yaml  navier-stokes-afdps.yaml
full_waveform_inversion/: .gitignore  README.md  main.py
full_waveform_inversion/afdps_fwi/: __init__.py  algo.py  devito_adjoint.py  operator.py  sampler.py
full_waveform_inversion/configs/: config.yaml
full_waveform_inversion/scripts/: aggregate_fwi_afdps_results.py  make_setup_pdf.py  run_fwi_afdps_gb200.sh  run_fwi_afdps_sharded.sh  run_fwi_afdps_single.sh
full_waveform_inversion/tests/: test_sampler_cpu.py
inverse_problems/: navier_stokes_afdps.py  ns_adjoint.py
inverse_scattering/: .gitignore  README.md  main.py  plan.md
inverse_scattering/algo/: afdps_scatter.py  ddnm_scatter.py  dps_scatter.py  eki_scatter.py  enkg_scatter.py  reddiff_scatter.py
inverse_scattering/configs/: config.yaml
inverse_scattering/inverse_problems/: inverse_scatter_afdps.py  inverse_scatter_batch.py
inverse_scattering/scripts/: aggregate_table3.py  download_assets.sh  gpu_log.sh  make_setup_pdf.py  metrics_lib.py  precompute_svd.py  run_test.sh  run_test_all.sh  run_val_sweep.sh  (+2 more)
navier_stokes/: Dataset_Card.md  README_InverseBench.md  eval.py  main.py  pyproject.toml
scripts/: download_assets.sh  make_setup_pdf.py  md_to_pdf.py  pilot_resample.sh  run_multigpu.sh
training/: dataset.py
verification/: checks.py  smoke_track_b.py
(+39 files in other folders)
